# Checkerboard-CLI

./: .gitignore  README.md  main.py  pyproject.toml
src/checkerboard_cli/: app.py  getPosition.py
src/checkerboard_cli/config/: ChessMapping.py
src/checkerboard_cli/utils/: cameraAvaliabilityCheck.py
src/checkerboard_cli/visualizeTool/: ChessLive.py
