[project]
name = "checkerboard-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pupil-apriltags>=1.0.4.post11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/checkerboard_cli"]

[project.scripts]
rac = "checkerboard_cli:main"
